src/tests/snapshots/mu__tests__object_load_index__field.snap
---
source: src/tests/object_load_index.rs
expression: snapshot
---
# Input:
v := { a: 10 }
print v["a"]


# Result (success):
none

# Stdout:
10


