src/tests/snapshots/mu__tests__object_load_index__unknown_opt_nested.snap
---
source: src/tests/object_load_index.rs
expression: snapshot
---
# Input:
v := { a: { b: 10 } }
print ?v["a"]["b"]


# Result (success):
none

# Stdout:
10


